Switched from the Vulkan SDK to SFML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,14 @@ project (baseline)
 cmake_minimum_required (VERSION 3.10)
 
 add_executable(
-  baseline
+    ${PROJECT_NAME}
 
   src/main.cpp
 )
 
-find_package(Vulkan REQUIRED)
-target_link_libraries(baseline Vulkan::Vulkan)
+target_link_libraries(
+    ${PROJECT_NAME}
+    sfml-graphics
+    sfml-window
+    sfml-system
+)
